--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
+    "sweetalert2": "^11.0.18",
     "typescript": "~4.1.5"
   },
   "scripts": {
