--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-hot-toast": "^2.0.0",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.0",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^6.27.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
     "typescript": "~4.1.5"
@@ -47,8 +47,9 @@
   },
   "devDependencies": {
     "@types/react-modal": "^3.12.1",
-    "@types/react-router-dom": "^5.1.8",
+    "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.11",
     "json-server": "^0.16.3"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
